# SERE

./: .gitignore  AGENTS.md  README.md  REVIEW.md  pyproject.toml  test_long_horizon.py
docs/: pddl_landscape_research.md
domain/: assembly.yaml  kitchen.yaml
environments/: sere_env.py
integrations/: __init__.py
integrations/ludic/: __init__.py  ludic_env.py
integrations/verifiers/: .gitignore  README.md  __init__.py  dataset.py  pyproject.toml  vf_sere.py  wrapper.py
scripts/: floortile_generate.py  goldminer_generate.py  openstacks_generate.py  rovers_generate.py  satellite_generate.py  test_agentic_eval.py  test_rml_eval.py
scripts/ludic/: eval.py  eval_config.yaml
scripts/verifiers/: example_usage.py
src/cli/: run_task.py
src/core/: pddl_env.py  prompt_formatter.py  world_state.py
src/io/: factory.py  task_loader.py
src/pddl/: domain_spec.py  grounding.py  nl_mapper.py
src/sere/assets/domain/: assembly.yaml  floortile.yaml  goldminer.yaml  kitchen.yaml  openstacks.yaml  rovers.yaml  satellite.yaml
src/sere/assets/pddl/assembly/: domain.pddl  extensions.yaml
src/sere/assets/pddl/barman/: extensions.yaml
src/sere/assets/pddl/blocksworld/: extensions.yaml
src/sere/assets/pddl/childsnack/: extensions.yaml
src/sere/assets/pddl/depots/: extensions.yaml
src/sere/assets/pddl/driverlog/: extensions.yaml
src/sere/assets/pddl/ferry/: domain.pddl  extensions.yaml
src/sere/assets/pddl/floortile/: domain.pddl  extensions.yaml
src/sere/assets/pddl/freecell/: extensions.yaml
src/sere/assets/pddl/goldminer/: domain.pddl  extensions.yaml
src/sere/assets/pddl/gripper/: extensions.yaml
src/sere/assets/pddl/hiking/: extensions.yaml
src/sere/assets/pddl/kitchen/: domain.pddl  extensions.yaml
src/sere/assets/pddl/logistics/: extensions.yaml
src/sere/assets/pddl/miconic/: extensions.yaml
src/sere/assets/pddl/openstacks/: domain.pddl  extensions.yaml
src/sere/assets/pddl/parking/: extensions.yaml
src/sere/assets/pddl/peg-solitaire/: extensions.yaml
src/sere/assets/pddl/rovers/: extensions.yaml
src/sere/assets/pddl/satellite/: extensions.yaml
src/sere/assets/pddl/sokoban/: extensions.yaml
src/sere/cli/: run_task.py
src/sere/core/: agentic_env.py  invariants.py  pddl_env.py  prompt_formatter.py  semantics.py  validator.py  world_state.py
src/sere/core/pddl_env/: __init__.py  engine.py  env.py  planning.py  prompt_formatter.py  rendering.py  run_mode.py
src/sere/integrations/: __init__.py  ludic_env.py  ludic_parser.py
src/sere/integrations/verifiers/: README.md  __init__.py  parser.py
src/sere/io/: pddl_loader.py  task_loader.py
src/sere/pddl/: domain_spec.py  grounding.py  nl_mapper.py  pddl_parser.py  sexpr.py
src/sere/rml/: __init__.py  problems.py  rml_env.py  rml_parser.py  simulator.py  terrain.py
tasks/assembly/: t01_simple_fasten.yaml  t02_pick_equip_fasten.yaml  t03_get_tool_from_bin_align_and_fasten.yaml  t04_multilocation_recharge_then_fasten.yaml  t05_replace_installed_part.yaml
tasks/kitchen/: t01_make_tea_basic.yaml  t01_one_step_steep.yaml  t02_pour_then_steep.yaml  t03_open_mug_pour_steep.yaml  t04_open_both_then_pour_steep.yaml  t05_heat_once_then_pour_steep.yaml  t06_fetch_teabag_simple_nav.yaml  t07_power_on_and_heat_then_tea.yaml  t08_more_nav_scatter_objects.yaml  t09_energy_gate_recharge_once.yaml  t10_full_constraints_time_energy_power.yaml
tests/: test_affordance_generation.py  test_domain_contracts.py  test_env.py  test_exception_handling.py  test_ludic_integration.py  test_quantified_effects.py  test_reference_plans.py  test_rml.py  test_stochastic_nl_mapping.py  test_validator.py  test_verifiers_integration.py
tests/assembly/: test_core_assembly.py
tests/kitchen/: test_core_kitchen.py  test_reference_plans.py  test_sink_kitchen.py
(+69 files in other folders)
