[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "sere"
version = "0.1.0"
description = "Symbolic Embodied Reasoning Environments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
sere-run = "sere.cli.run_task:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sere"]

[tool.hatch.build]
include = [
  "src/sere/**",
  "README.md",
  "LICENSE",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]